MPA-2: added a dml script to the docker database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       # Opens port 3306 on the container
       - '3306'
     volumes:
-      - ./docker/ddl:/docker-entrypoint-initdb.d
+      - ./docker/database:/docker-entrypoint-initdb.d
       - mysql-data:/var/lib/mysql
 
 volumes:
