--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/db
-#spring.datasource.username=
-#spring.datasource.password=
-#spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url=jdbc:mysql://database:3306/mentor_portal_db_dev?autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=password
