--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://database:3306/mentor_portal_db_dev?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://database:3306/mentor_portal_db_dev?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=password
