--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     restart: unless-stopped
     networks:
       - mentor-portal-data
+      - front-end
     depends_on:
       - database
 
@@ -34,6 +35,8 @@ services:
     volumes:
       - ./docker/database:/docker-entrypoint-initdb.d
       - mysql-data:/var/lib/mysql
+    cap_add:
+      - SYS_NICE  # CAP_SYS_NICE
 
 volumes:
   mysql-data:
@@ -41,3 +44,5 @@ volumes:
 
 networks:
   mentor-portal-data:
+  front-end:
+    external: true
