setup docker-compose to work with api network; setup inital mentor and student list pages; working on post/create user form

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,18 @@
 version: '3.7'
 
 services:
-  client:
+
+  front:
+    container_name: front
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: recipe-client
     hostname: localhost
     ports:
       - 5000:5000
+    networks:
+      - front-end
+
+networks:
+  front-end:
+    name: front-end
