--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.19.4",
     "sirv-cli": "^1.0.0",
     "svelte-awesome": "^2.4.2",
     "svelte-routing": "^1.6.0"
