--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+auth0:
+  audience: mentor-portal-dev
+  issuer: 'https://dev-0xs8ho26.us.auth0.com/'
+  jwks: https://dev-0xs8ho26.us.auth0.com/.well-known/jwks.json
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
