--- a/service/mentor-portal-api/src/main/resources/application.yml
+++ b/service/mentor-portal-api/src/main/resources/application.yml
@@ -1,13 +1,8 @@
 app:
   jwt:
-    secret: "APP_SECRET"
+    secret: ${APP_SECRET}
     token-prefix: "Bearer "
-    tokenExpirationAfterDays: 14
-
-auth0:
-  audience: ${AUDIENCE}
-  issuer: ${ISSUER_URL}
-  jwks: https://dev-0xs8ho26.us.auth0.com/.well-known/jwks.json
+    tokenExpirationInMinutes: ${TOKEN_EXPIRATION_IN_MINUTES}
 
 spring:
   datasource:
