--- a/.env_template_production
+++ b/.env_template_production
@@ -1,20 +1,22 @@
-#### What to change
-# MYSQL_DATABASE_NAME
-# MYSQL_DATABASE_USER
-# MYSQL_DATABASE_PASSWORD
-# DATABASE_ROOT
-# EXPOSED_DB_PORT
-
 # PRODUCTION ENV SETTINGS
+#### BASE URLS/CLIENT rollup.config.js ENV VARIABLES
+API_BASE_URL=
+CLIENT_BASE_URL=
+
+#### SERVER/API spring application.yml ENV VARIABLES
+# DATABASE ip address
+DATABASE_ROOT=
+
 #### PRODUCTION configurable env variables
 MYSQL_DATABASE_NAME=
 MYSQL_DATABASE_USER=
 MYSQL_DATABASE_PASSWORD=
 EXPOSED_DB_PORT=
 
-#### SERVER/API spring application.yml ENV VARIABLES
-# DATABASE
-DATABASE_ROOT=
+### SERVER/API security ENV VARIABLES
+DEFAULT_MENTOR_PASSWORD=
+APP_SECRET=
+TOKEN_EXPIRATION_IN_MINUTES=
 
 ### docker-compose CLIENT ENV VARIABLES
 FRONTEND_PORTS=5000
@@ -22,12 +24,3 @@ FRONTEND_PORTS=5000
 #### docker-compose SERVER/API ENV VARIABLES
 API_PORTS_ONE=8080
 API_PORTS_TWO=5080
-
-#### CLIENT rollup.config.js ENV VARIABLES
-API_BASE_URL='http://localhost:8080'
-CLIENT_BASE_URL='http://localhost:5000'
-
-
-### SERVER/API security ENV VARIABLES
-APP_SECRET=my-super-secret-secret
-TOKEN_EXPIRATION_IN_MINUTES=60
