--- a/service/mentor-portal-client/package.json
+++ b/service/mentor-portal-client/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.19.4",
+    "quill": "^1.3.7",
     "sirv-cli": "^1.0.0",
     "svelte-awesome": "^2.4.2",
     "svelte-routing": "^1.6.0"
